[gd_scene load_steps=7 format=3 uid="uid://k4kikx3kx4qn"]

[ext_resource type="PackedScene" uid="uid://bhlk3jlpfm1h0" path="res://addons/interactive/props/chest/source/chest.glb" id="1_w3qd4"]
[ext_resource type="Script" path="res://addons/interactive/props/object/object.gd" id="2_kkw3q"]
[ext_resource type="PackedScene" uid="uid://mwqqyoo76wvc" path="res://data/bots/sophia/sophia_skin.tscn" id="3_oe5w7"]
[ext_resource type="PackedScene" uid="uid://bcant1jf3ssg3" path="res://addons/interactive/interaction/Interactable.tscn" id="3_trsna"]

[sub_resource type="BoxShape3D" id="BoxShape3D_clxje"]
size = Vector3(0.614, 0.550948, 0.587)

[sub_resource type="BoxShape3D" id="BoxShape3D_frebs"]
size = Vector3(0.614408, 0.517854, 0.586966)

[node name="object" instance=ExtResource("1_w3qd4")]
script = ExtResource("2_kkw3q")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/1/rotation = Quaternion(0.75707, 7.00948e-07, 8.12244e-07, 0.653334)

[node name="top_Chest_0" parent="Armature/Skeleton3D" index="0"]
visible = false

[node name="SophiaSkin" parent="Armature/Skeleton3D" index="1" instance=ExtResource("3_oe5w7")]
transform = Transform3D(4.31053, 0, 0, 0, 0, 4.31053, 0, -4.31053, 0, -0.0249391, 0.798386, 0.947359)

[node name="StaticBody3D" type="StaticBody3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.251476, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1.71694, 0, 0, 0, 1, 0, 0.218096, 0)
shape = SubResource("BoxShape3D_clxje")

[node name="Interactable" parent="." index="3" instance=ExtResource("3_trsna")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.251476, 0)

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1.85954, 0, 0, 0, 1, 0, 0.218512, 0)
shape = SubResource("BoxShape3D_frebs")

[node name="OmniLight3D" type="OmniLight3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.298945, 0)
light_color = Color(1, 0.972549, 0.345098, 1)
light_energy = 0.0
omni_range = 1.287

[node name="Label3D" type="Label3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30014, 0)
text = "[E] to play"

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
